--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build"
+    "build": "npx gulp build"
   },
   "repository": {
     "type": "git",
