corrected CV, added sitemap and netlify headers

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,14 @@
 [build]
   command = "npm install && npm run build"
+
+  [[headers]]
+  for = "/*.html"
+  [headers.values]
+    Content-Type = "text/html; charset=UTF-8"
+
+[[headers]]
+  for = "/sitemap.xml"
+  [headers.values]
+    Content-Type = "application/xml"
+
+
